updated css and html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <path d="M470,77.8V100H0L0,0l151.6,0c4.5,0,8.9,1.6,12.6,4.5l88.4,69.8c2.9,2.3,6.3,3.5,9.8,3.5H470z"/>
             </svg>
 
-            <div class="screen-right">Screen-right
+            <div class="screen-right">
             <ul id="moves"></ul>
             <p id="evolve"></p>
                 <input type="text" name="pass-one" id="pokemon">
