--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                     <img id="imageevolve" src="" alt="image">
                     </div>
                 </div>
-
             </div>
 
             <div class="middle">
@@ -46,26 +45,28 @@
             </div>
         </div>
 
-
-
         <div class="right">
+
+        <div class="right-inner">
             <svg class="svg-right" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 470 100" style="enable-background:new 0 0 470 100;" xml:space="preserve">
             <path d="M470,77.8V100H0L0,0l151.6,0c4.5,0,8.9,1.6,12.6,4.5l88.4,69.8c2.9,2.3,6.3,3.5,9.8,3.5H470z"/>
             </svg>
-
-            <div class="screen-right">
-                <div>
-                <ul id="moves"></ul>
-                <p id="evolve"></p>
+            <div class="body-right">
+                <div class="content-right">
+                    <ul id="moves"></ul>
+                    <p id="evolve"></p>
                     <input type="text" name="pass-one" id="pokemon">
                     <button type="button" id="run">Choose Pokémon</button>
                 </div>
             </div>
+
+        </div>
         </div>
 
     </div>
 </div>
+
 
 
 
